# saga

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  gonk.toml  progress.py  report.json
gonk/: Cargo.toml
gonk/src/: main.rs  split.rs
host-tests/: CMakeLists.txt  load.cpp  window.cpp
src/: .clang-format  CMakeLists.txt  batman.cpp  decomp.h  globals.cpp  globals.h  host.cmake  host.cpp  host.hpp  lostandfound.cpp  lostandfound.h  target.cmake  wincompat.h
src/deflate/: deflate.cpp  deflate.h  deflate_noopt.cpp
src/game/: area.cpp  area.h  character.cpp  character.h  cheat.cpp  cheat.h  collection.cpp  collection.h  episode.cpp  episode.h  game.cpp  game.h  gizmo.cpp  gizmo.h  level.cpp  level.h  mission.cpp  mission.h  store.h  timer.cpp  timer.h  world.cpp  world.h
src/game/gizmos/: ai.cpp  ai.h  attractos.cpp  attractos.h  door.cpp  door.h  edgizshadowmachine.cpp  edgizshadowmachine.h  gizaimessage.cpp  gizaimessage.h  gizbombgen.cpp  gizbombgen.h  gizbuildits.cpp  gizbuildits.h  gizforce.cpp  gizforce.h  gizmopickups.cpp  gizmopickups.h  gizobstacles.cpp  gizobstacles.h  gizpanel.cpp  gizpanel.h  gizportal.cpp  gizportal.h  gizrandom.cpp  gizrandom.h  gizspecial.cpp  gizspecial.h  giztimer.cpp  giztimer.h  giztorpmachine.cpp  giztorpmachine.h  gizturrets.cpp  gizturrets.h  grapples.cpp  grapples.h  guidelines.cpp  guidelines.h  hatmachine.cpp  hatmachine.h  (+32 more)
src/gameapi.saga/ai/aisys/: aiscript.cpp  aistate.cpp  aisys.h
src/gameapi.saga/edtools/: edfile.cpp  edfile.h
src/gameapi/ai/aisys/: aiscript.cpp  aistate.cpp  aisys.h
src/gameapi/edtools/: edfile.cpp  edfile.h
src/gameapi/gui/: apimenu.cpp  apimenu.h
src/gameframework/: export.h  saveload.cpp  saveload.h
src/gamelib/crc/: crc.c  crc.cpp  crc.h
src/gamelib/nuwind/: nuwind.cpp  nuwind.h
src/host-tests/: main.cpp  test_load.hpp  test_window.hpp
src/host-tests/nuios/: ios_graphics.cpp  nutex_host.cpp  nutex_ios_ex.cpp
src/implode/: implode.c  implode.cpp  implode.h
src/init/: init.cpp  init.hpp
src/java/: java.h  jni_stub.cpp
src/legoapi/: character.cpp  character.h  cheat.cpp  cheat.h  gizmo.cpp  gizmo.h  world.h
src/legoapi/gizmos/: ai.cpp  ai.h  gizportal.cpp  giztimer.cpp
src/legogame/: game.cpp  game.h  startup.cpp  startup.h  target.h  target_android.cpp
src/lostandfound/: qrand.cpp  qrand.h
src/nu2api.saga/nu3d/: NuRenderDevice.cpp  NuRenderDevice.h  nucamera.cpp  nucamera.h  nugscn.h  numtl.cpp  numtl.h  nuocclusion.cpp  nuocclusion.h  nuportal.cpp  nuportal.h  nuprim.cpp  nuprim.h  nuqfnt.cpp  nuqfnt.h  nurndr.c  nurndr.cpp  nurndr.h  nushader.cpp  nustream.cpp  nutex.cpp  nutex.h  nutex_android.cpp  nutex_android.h  nuwater.cpp  nuwater.h
src/nu2api.saga/nuandroid/: ios_graphics.cpp  ios_graphics.h  nuios.cpp  nuios.h  nuphoneos.cpp  nuphoneos.h
src/nu2api.saga/nucore/: NuMemoryManager.cpp  NuMemoryManager.h  NuMemoryPool.cpp  NuMemoryPool.h  bgproc.h  common.h  deflate.cpp  deflate.h  implode.cpp  implode.h  nuapi.cpp  nuapi.h  nucore.cpp  nucore.h  nufpar.cpp  nufpar.h  nukeyboard.cpp  nukeyboard.h  nulst.cpp  nulst.h  numem.c  numem.h  numemory.cpp  numemory.h  numouse.cpp  numouse.h  nunew.cpp  nupad.cpp  nupad.h  nurdp.h  nurdpf.cpp  nurdpf.h  nurdpi.cpp  nustring.cpp  nustring.h  nustring_c.cpp  nuthread.cpp  nuthread.h  nutime.cpp  nutime.h  (+3 more)
src/nu2api.saga/nufile/: export.h  nudat.c  nudatfile.cpp  nufile.c  nufile.cpp  nufile.h  nufilebase.cpp  nufilepak.cpp  nufilepak.h  nufpar.cpp  nufpar.h  numc.cpp  nupsfile.cpp  tmclient.cpp  tmclient.h
src/nu2api.saga/numath/: nuang.h  nufloat.c  nufloat.h  numtx.c  numtx.cpp  numtx.h  nuquat.cpp  nuquat.h  nutrig.c  nutrig.cpp  nutrig.h  nutrig_gen.cpp  nuvec.c  nuvec.h  nuvec4.c  nuvec4.h
src/nu2api.saga/numemory/: NuMemoryManager.cpp  NuMemoryManager.h  NuMemoryPool.cpp  NuMemoryPool.h  numemory.cpp  numemory.h  numemory_android.cpp  numemory_android.h
src/nu2api.saga/numusic/: numusic.cpp  numusic.h  sfx.cpp  sfx.h
src/nu2api.saga/nuplatform/: nuplatform.cpp  nuplatform.h
src/nu2api.saga/nusound/: nulist.hpp  nusound.cpp  nusound.h  nusound3_include.cpp  nusound3_include.hpp  nusound_android.cpp  nusound_android.hpp  nusound_buffer.cpp  nusound_buffer.hpp  nusound_bus.cpp  nusound_bus.hpp  nusound_loader.hpp  nusound_memorymanager.cpp  nusound_memorymanager.hpp  nusound_sample.cpp  nusound_sample.hpp  nusound_source.cpp  nusound_source.hpp  nusound_streamer.cpp  nusound_streamer.hpp  nusound_system.cpp  nusound_system.hpp
src/nu2api.saga/nustr/: nustr.c  nustr.h
src/nu2api.saga/nuthread/: NuThreadManager.cpp  NuThread_android.cpp  bgproc.cpp  nuthread.c  nuthread.cpp  nuthread.h
src/nu2api/nu3d/: NuRenderDevice.cpp  NuRenderDevice.h  nucamera.cpp  nucamera.h  nudlist.c  nudlist.h  nudynamiclight.c  nudynamiclight.h  numtl.cpp  numtl.h  nuportal.cpp  nuportal.h  nuprim.cpp  nuprim.h  nuqfnt.cpp  nuqfnt.h  nurndr.cpp  nurndr.h  nuscreen.cpp  nuscreen.hpp  nushader.cpp  nushader.h  nutex.cpp  nutex.h  nuvport.cpp  nuvport.h
src/nu2api/nuandroid/: ios_graphics.cpp  ios_graphics.h
src/nu2api/nucore/: NuInputDevice.h  NuInputManager.cpp  NuMemoryManager.cpp  NuMemoryManager.h  NuVirtualTouchDevice.cpp  NuVirtualTouchDevice.h  common.h  deflate.cpp  nuapi.cpp  nucore.cpp  nucore.hpp  numemory.cpp  numemory.h  nupad.h  nupad_interface.cpp  nuptrblock.cpp  nuptrblock.h  nustring.h  nustring_c.cpp  nuthread.h  nutime.h
src/nu2api/numath/: nufloat.c  nufloat.h  numath.h  numtx.h  nuplane.cpp  nuplane.h  nuvec.cpp  nuvec.h
src/nu2api/numusic/: sfx.cpp
src/nu2api/nuplatform/: nudevicespecs.cpp  nudevicespecs.hpp  nuplatform.h
src/nu2api/nusound/: nusound3_include.cpp  nusound_buffer.cpp  nusound_buffer.hpp  nusound_decoder.cpp  nusound_decoder.hpp  nusound_decoder_ogg.cpp  nusound_decoder_ogg.hpp  nusound_loader.cpp  nusound_loader_ogg.cpp  nusound_sample.cpp  nusound_sample.hpp  nusound_streamer.cpp  nusound_streamer.hpp  nusound_streamer_thread.cpp  nusound_weakptr.cpp  nusound_weakptr.hpp
src/saveload/: export.h  saveload.cpp  saveload.h
(+49 files in other folders)
