[package]
name = "gonk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
elf = "0.8.0"
log = "0.4.29"
object = { version = "0.37.0", features = ["read", "write"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
thiserror = "2.0.17"
toml = "0.9.10"
